--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test": "ng test",
     "test-cross": "SAUCE=true ng test",
     "test-coverage": "ng test --code-coverage",
+    "version": "node scripts/version",
     "postversion": "run-s changelog git-add git-commit-changelog",
     "git-add": "git add -A",
     "git-commit-changelog": "git commit -am \"chore(changelog): update [skip ci] \"",
