--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ngx-bootstrap-base",
   "version": "3.0.1",
   "description": "Native Angular Bootstrap Components",
+  "schematics": "./schematics/src/collection.json",
   "private": true,
   "scripts": {
     "lite-server": "lite-server -c scripts/bs-config.js",
@@ -22,8 +23,9 @@
     "disable-lint": "tslint \"**/*.ts\" -c tslint.json --fix --type-check -t prose -e \"node_modules/**\" -e \"dist/**\" -e \"temp/**\" -e \"scripts/docs/**\"",
     "flow.changelog": "conventional-changelog -i CHANGELOG.md -s -p angular",
     "flow.github-release": "conventional-github-releaser -p angular",
-    "build": "run-s build.modules build.sass build.es2015",
+    "build": "run-s build.modules build:schematics build.sass build.es2015",
     "build.watch": "node scripts/build-modules --watch",
+    "build:schematics": "node scripts/schematics/build",
     "build.modules": "node scripts/build-modules",
     "build.sass": "node-sass --recursive src --output dist --source-map true --source-map-contents sass",
     "build.es2015": "node ./scripts/es2015/bundle.es2015.js",
@@ -73,6 +75,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.1",
+    "@angular-devkit/core": "7.0.0-rc.1",
+    "@angular-devkit/schematics": "7.0.0-rc.1",
     "@angular/animations": "6.0.1",
     "@angular/cli": "6.1.5",
     "@angular/common": "6.0.1",
@@ -90,6 +94,7 @@
     "@bahmutov/add-typescript-to-cypress": "2.0.0",
     "@nguniversal/express-engine": "6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
+    "@schematics/angular": "7.0.0-rc.1",
     "@types/chai": "4.1.3",
     "@types/jasmine": "2.8.7",
     "@types/marked": "0.3.0",
@@ -148,7 +153,7 @@
     "tslint": "5.10.0",
     "tslint-config-valorsoft": "2.1.1",
     "typedoc": "0.11.1",
-    "typescript": "~2.7.2",
+    "typescript": "2.7.2",
     "wait-on": "2.1.0",
     "wallaby-webpack": "3.9.7",
     "webpack-bundle-analyzer": "2.11.3",
