fix(build): adding a script for an update of version

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "test": "ng test",
     "test-cross": "SAUCE=true ng test",
     "test-coverage": "ng test --code-coverage",
-    "postversion": "run-s changelog git-add git-commit-changelog",
+    "version": "node scripts/version",
+    "version.changelog": "run-s changelog git-add git-commit-changelog",
     "git-add": "git add -A",
     "git-commit-changelog": "git commit -am \"chore(changelog): update [skip ci] \"",
     "changelog": "conventional-changelog -i CHANGELOG.md -s -p angular -r 2",
